# sylos-tango

./: .gitignore  00-start-all.sh  01-init.sh  03-start-gateway.sh  04-start-client.sh  0x-prepare-permissions.sh  README.md  config.ini  tango docker stuff
cxx/: CMakeLists.txt  LaserController.cpp  LaserController.h  LaserControllerClass.cpp  LaserControllerClass.h  LaserControllerClassFactory.cpp  LaserControllerStateMachine.cpp  main.cpp
docker/SYLOS-Gateway/tango9/: Dockerfile  Makefile  docker-compose.yaml
docker/SYLOS-Gateway/tango9/files/: monit-tango9.conf  pytango9.patch  subdevices.patch  sudo-tangouser
scripts/: run-daemon.sh  run-docker.sh  run-onetime.sh  upload.sh
src/laser_system/: laser_gateway.py  laser_gatewayCLIENT.py  laser_gatewayDS.py  settings.py
src/laser_system/examples/: example_concurrency.py
util/: db_loader.py
